--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-torch==0.4.0
+PyHamcrest==1.10.1
+# torch==0.4.0
+torch==1.2.0
+torchvision==0.4.0
 nltk==3.4.5
 tensorboardX==0.8
 torchtext==0.2.3
